manifests/staging/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "configmanagementapi"
  namespace: "gatekeeper-system"
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "configmanagementapi"
  template:
    metadata:
      labels:
        app: "configmanagementapi"
    spec:
      containers:
        - name: "configmanagementapi"
          image: "us-east1-docker.pkg.dev/settyl-gcp-infra/supplychainvisibilitygcrstaging/configmanagementapi:4e7eedea2f443828a46ecdff7c2a9e72c4ccb025"
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "configmanagementapi"
  namespace: "supplychainvisibility"
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "configmanagementapi"
  template:
    metadata:
      labels:
        app: "configmanagementapi"
    spec:
      containers:
        - name: "configmanagementapi"
          image: "us-east1-docker.pkg.dev/settyl-gcp-infra/supplychainvisibilitygcrstaging/configmanagementapi"
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "configmanagementapi"
  namespace: "kube-system"
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "configmanagementapi"
  template:
    metadata:
      labels:
        app: "configmanagementapi"
    spec:
      containers:
        - name: "configmanagementapi"
          image: "us-east1-docker.pkg.dev/settyl-gcp-infra/supplychainvisibilitygcrstaging/configmanagementapi"
          ports:
            - containerPort: 8000
